@@ -1,15 +1,18 @@
 language: python
+os: linux
+dist: focal
 
-matrix:
+jobs:
   include:
   - python: 3.6
   - python: 3.7
-    sudo: required
-    dist: xenial
+  - python: 3.8
+  - python: 3.9
 
 install:
   - pip install -r requirements.txt
   - pip install requests-mock
   - pip install -e .
+
 script:
   - pytest tests -v
